# test_task_qna

./: Dockerfile  README.md  alembic.ini  alembic_docker.ini  config.toml  config_docker.toml  docker-compose.yaml  logging.conf  pyproject.toml
.github/workflows/: python-app.yml
migrations/: env.py
migrations/versions/: fbba0552cf6f_initial_tables.py
src/qna_server/: __init__.py  __main__.py
src/qna_server/api/: server.py
src/qna_server/api/endpoints/: __init__.py  answers_endpoints.py  api_router.py  questions_endpoints.py
src/qna_server/dto/: __init__.py  answer.py  answer_deletion_confirmation.py  create_answer.py  create_question.py  question.py  question_deletion_confirmed.py  questions_with_answers.py
src/qna_server/exceptions/: __init__.py  data_integrity_error.py  not_found_error.py
src/qna_server/storage/protocol/: __init__.py  answers_repo.py  questions_repo.py  transaction_manager.py
src/qna_server/storage/sqla_implementation/: __init__.py  answer_sqla_repo.py  question_sqla_repo.py  transaction_manager_sqla.py
src/qna_server/storage/sqla_implementation/tables/: __init__.py  answer.py  question.py
src/qna_server/types/: __init__.py  context_id.py  logging_context.py
src/qna_server/use_cases/: __init__.py  answers_use_cases.py  questions_use_cases.py
src/qna_server/utils/: config_schema.py  providers.py
tests/: test_config.toml
tests/test_sqla_repos/: fixtures.py  test_answers_repo.py  test_question_repo.py
