[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qna_server"
version = "0.0.1"
authors = [
  { name="Rud356", email="r.moroshkin2015@yandex.ru" },
]
description = "Test task demo api"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "sqlalchemy[asyncio]~=2.0.42",
    "fastapi[standard]~=0.116.1",
    "asyncpg~=0.30.0",
    "dishka~=1.6.0",
]

[project.urls]
Homepage = "https://github.com/Rud356/test_task_qna"
Issues = "https://github.com/Rud356/test_task_qna/issues"

[project.optional-dependencies]
migration = [
    "alembic~=1.16.4"
]
dev = [
    "mypy~=1.17.1",
    "ruff~=0.12.9",
    "sphinx-lint~=1.0.0",
    "pytest~=8.4.1",
    "pytest-asyncio~=1.1.0",
]